update/WJ-2 - Update tests due to migration to Spring Data JPA