@@ -4,14 +4,10 @@ import com.github.blog.controller.dto.common.UserDto;
 import com.github.blog.controller.dto.request.PageableRequest;
 import com.github.blog.controller.dto.request.filter.UserFilterRequest;
 import com.github.blog.controller.dto.response.PageResponse;
-import com.github.blog.controller.dto.response.PageableResponse;
 import com.github.blog.model.User;
-import com.github.blog.repository.UserDao;
-import com.github.blog.repository.dto.common.Page;
-import com.github.blog.repository.dto.common.Pageable;
-import com.github.blog.repository.dto.filter.UserFilter;
+import com.github.blog.repository.UserRepository;
+import com.github.blog.repository.filter.UserFilter;
 import com.github.blog.service.impl.UserServiceImpl;
-import com.github.blog.service.mapper.PageableMapper;
 import com.github.blog.service.mapper.UserMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -20,7 +16,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -37,13 +39,10 @@ import static org.mockito.Mockito.when;
 public class UserServiceImplTests {
 
     @Mock
-    private UserDao userDao;
+    private UserRepository userRepository;
 
     @Mock
     private UserMapper userMapper;
-
-    @Mock
-    private PageableMapper pageableMapper;
 
     @InjectMocks
     private UserServiceImpl userService;
@@ -54,10 +53,8 @@ public class UserServiceImplTests {
     private final Long id = 1L;
     private final String username = "username";
 
-    private final Pageable pageable = new Pageable();
-    private final PageableRequest pageableRequest = new PageableRequest(null, null, null);
+    private final PageableRequest pageableRequest = new PageableRequest(10, null, "asc");
     private final UserFilterRequest userFilterRequest = new UserFilterRequest(null, null, null, null, null, null, null, null);
-    private final PageableResponse pageableResponse = new PageableResponse(0, 0, null);
 
     @BeforeEach
     void setUp() {
@@ -68,7 +65,7 @@ public class UserServiceImplTests {
     @Test
     @DisplayName("user service: delete")
     void delete_deletesUser_whenDataIsValid() {
-        when(userDao.findById(id)).thenReturn(Optional.of(user));
+        when(userRepository.findById(id)).thenReturn(Optional.of(user));
         when(userMapper.toDto(user)).thenReturn(returnedUserDto);
 
         UserDto deletedUserDto = userService.delete(id);
@@ -76,20 +73,21 @@ public class UserServiceImplTests {
         assertThat(deletedUserDto).isNotNull();
         assertThat(deletedUserDto.id()).isEqualTo(id);
         assertThat(deletedUserDto.username()).isEqualTo(username);
-        verify(userDao, times(1)).delete(user);
+        verify(userRepository, times(1)).delete(user);
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     @DisplayName("user service: find all by role")
     void find_findsAllUsersByRole_whenDataIsValid() {
         UserFilter filter = new UserFilter();
 
-        Page<User> page = new Page<>(List.of(user), pageable, 1L);
-        PageResponse<UserDto> pageResponse = new PageResponse<>(List.of(returnedUserDto), pageableResponse, 1L);
+        Pageable pageable = PageRequest.of(pageableRequest.pageNumber(), pageableRequest.pageSize(), pageableRequest.getSort());
+        Page<User> page = new PageImpl<>(List.of(user), pageable, 1L);
+        PageResponse<UserDto> pageResponse = new PageResponse<>(Collections.singletonList(returnedUserDto), 1, 1, 0, 1);
 
         when(userMapper.toEntity(any(UserFilterRequest.class))).thenReturn(filter);
-        when(pageableMapper.toEntity(any(PageableRequest.class))).thenReturn(pageable);
-        when(userDao.findAll(filter, pageable)).thenReturn(page);
+        when(userRepository.findAll(any(Specification.class),  any(Pageable.class))).thenReturn(page);
         when(userMapper.toDto(page)).thenReturn(pageResponse);
 
         PageResponse<UserDto> filterSearchResult = userService.findAll(userFilterRequest, pageableRequest);
@@ -100,16 +98,17 @@ public class UserServiceImplTests {
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     @DisplayName("user: find by username")
     void find_findsUserByUsername_whenDataIsValid() {
         UserFilter filter = new UserFilter();
 
-        Page<User> page = new Page<>(List.of(user), pageable, 1L);
-        PageResponse<UserDto> pageResponse = new PageResponse<>(List.of(returnedUserDto), pageableResponse, 1L);
+        Pageable pageable = PageRequest.of(pageableRequest.pageNumber(), pageableRequest.pageSize(), pageableRequest.getSort());
+        Page<User> page = new PageImpl<>(List.of(user), pageable, 1L);
+        PageResponse<UserDto> pageResponse = new PageResponse<>(Collections.singletonList(returnedUserDto), 1, 1, 0, 1);
 
         when(userMapper.toEntity(any(UserFilterRequest.class))).thenReturn(filter);
-        when(pageableMapper.toEntity(any(PageableRequest.class))).thenReturn(pageable);
-        when(userDao.findAll(filter, pageable)).thenReturn(page);
+        when(userRepository.findAll(any(Specification.class), any(Pageable.class))).thenReturn(page);
         when(userMapper.toDto(page)).thenReturn(pageResponse);
 
         PageResponse<UserDto> filterSearchResult = userService.findAll(userFilterRequest, pageableRequest);
@@ -120,16 +119,17 @@ public class UserServiceImplTests {
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     @DisplayName("user service: find all by job")
     void find_findsAllUsersByJob_whenDataIsValid() {
         UserFilter filter = new UserFilter();
 
-        Page<User> page = new Page<>(List.of(user), pageable, 1L);
-        PageResponse<UserDto> pageResponse = new PageResponse<>(List.of(returnedUserDto), pageableResponse, 1L);
+        Pageable pageable = PageRequest.of(pageableRequest.pageNumber(), pageableRequest.pageSize(), pageableRequest.getSort());
+        Page<User> page = new PageImpl<>(List.of(user), pageable, 1L);
+        PageResponse<UserDto> pageResponse = new PageResponse<>(Collections.singletonList(returnedUserDto), 1, 1, 0, 1);
 
         when(userMapper.toEntity(any(UserFilterRequest.class))).thenReturn(filter);
-        when(pageableMapper.toEntity(any(PageableRequest.class))).thenReturn(pageable);
-        when(userDao.findAll(filter, pageable)).thenReturn(page);
+        when(userRepository.findAll(any(Specification.class), any(Pageable.class))).thenReturn(page);
         when(userMapper.toDto(page)).thenReturn(pageResponse);
 
         PageResponse<UserDto> filterSearchResult = userService.findAll(userFilterRequest, pageableRequest);
@@ -140,16 +140,17 @@ public class UserServiceImplTests {
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     @DisplayName("user service: find all by university")
     void find_findsAllUsersByUniversity_whenDataIsValid() {
         UserFilter filter = new UserFilter();
 
-        Page<User> page = new Page<>(List.of(user), pageable, 1L);
-        PageResponse<UserDto> pageResponse = new PageResponse<>(List.of(returnedUserDto), pageableResponse, 1L);
+        Pageable pageable = PageRequest.of(pageableRequest.pageNumber(), pageableRequest.pageSize(), pageableRequest.getSort());
+        Page<User> page = new PageImpl<>(List.of(user), pageable, 1L);
+        PageResponse<UserDto> pageResponse = new PageResponse<>(Collections.singletonList(returnedUserDto), 1, 1, 0, 1);
 
         when(userMapper.toEntity(any(UserFilterRequest.class))).thenReturn(filter);
-        when(pageableMapper.toEntity(any(PageableRequest.class))).thenReturn(pageable);
-        when(userDao.findAll(filter, pageable)).thenReturn(page);
+        when(userRepository.findAll(any(Specification.class), any(Pageable.class))).thenReturn(page);
         when(userMapper.toDto(page)).thenReturn(pageResponse);
 
         PageResponse<UserDto> filterSearchResult = userService.findAll(userFilterRequest, pageableRequest);
